第三次更新

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -250,6 +250,12 @@
 //==================================
 
 //==================================
+.hei16px{
+  height: 16px;
+}
+.hei20px{
+  height: 20px;
+}
 .hei018r{
   height: 0.18rem;
 }
@@ -578,6 +584,22 @@
 }
 
 //==================================
+
+.wid16px{
+  width: 16px;
+}
+.wid20px{
+  width: 20px;
+}
+.wid50px{
+  width: 50px;
+}
+.wid100px{
+  width: 100px;
+}
+.wid200px{
+  width: 200px;
+}
 .wid3{
   width: 3%;
 }
@@ -2146,6 +2168,9 @@
   .outline1Sed715d{
     outline: 1px solid #ed715d;
   }
+  .outline1S00003{
+    outline: 1px solid rgba(0,0,0,0.3);
+  }
  
 //======================== ==========
 .borderNone{
@@ -2532,4 +2557,44 @@
     border: 1px solid black;
     width:10%
   } 
+}
+.animal{
+  background-image: url('../images/nature_small.png');
+}
+.animal1{
+  background-position: 0 -0;
+}
+
+.animal2{
+  background-position: 0 -16px;
+}
+.animal3{
+  background-position: 0 -32px;
+}
+.animal4{
+  background-position: 0 -48px;
+}
+.animal5{
+  background-position: 0 -64px;
+}
+.animal6{
+  background-position: 0 -80px;
+}
+.animal7{
+  background-position: 0 -96px;
+}
+.animal8{
+  background-position: 0 -112px;
+}
+.animal9{
+  background-position: 0 -128px;
+}
+.onSelect{
+  width: 7px;
+  height: 15px;
+  border-bottom: 1px solid #cf2321;
+  border-right: 1px solid #cf2321;
+  transform: rotate(45deg);
+  position: relative;
+  left: 6px;
 }
