feat 刷綠教學生怪邏輯CSS feat 大廳暫時使用死帳密

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -1,3 +1,16 @@
+.fs20px{
+  font-size: 20px;
+}
+.fs30px{
+  font-size: 30px;
+}
+.fs40px{
+  font-size: 40px;
+}
+.fs50px{
+  font-size: 50px;
+}
+
 .fs60px{
   font-size: 60px;
 }
@@ -87,8 +100,41 @@
 .color_06730B{
   color:#06730B
 }
+.color_34e50a{
+  color: #34e50a;
+}
+.color_045affe8{
+  color: #045affe8;
+}
+.color_gray{
+  color:gray
+}
+.color_673211{
+  color: #673211;
+}
 .color_333{
   color:#333
+}
+.color_1f8f13{
+  color:#1f8f13
+}
+.color_0b76ff{
+  color:#0b76ff
+}
+.color_4d10ff{
+  color: #4d10ff;
+}
+.color_ff00ba{
+  color:#ff00ba
+}
+.color_purple{
+  color:purple
+}
+.color_brown{
+  color:brown
+}
+.color_orange{
+  color:orange
 }
 .color_ed1c00{
   color:#ed1c00
@@ -1451,6 +1497,9 @@
 }
 
 //==================================
+.pAll_20px{
+  padding: 20px;
+}
 .pAll_004{
   padding: 0.04rem;
 }
@@ -2175,6 +2224,9 @@
 //======================== ==========
 .borderNone{
   border:none
+}
+.border1S00003{
+  border: 1px solid rgba(0,0,0,0.3);
 }
 .border1Sed715d{
   border: 1px solid #ed715d;
