feat 新增刷綠教學-種族配置區塊

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -88,11 +88,20 @@
 .color_eb5054{
   color:#eb5054
 }
+.color_0415f5{
+  color:#0415f5
+}
+.color_07a30e{
+  color: #07a30e;
+}
 .color_00e08a{
   color:#00e08a
 }
 .color_42FF00{
   color:#42FF00
+}
+.color_972ba3{
+  color: #972ba3;
 }
 .color_yellow{
   color:yellow
@@ -624,6 +633,12 @@
 }
 .l-hei12r{
   line-height: 1.2rem;
+}
+.l-hei15r{
+  line-height: 1.5rem;
+}
+.l-hei2r{
+  line-height: 2rem;
 }
 .l-hei1{
   line-height: 1;
@@ -2335,6 +2350,9 @@
 }
 .borderRight1S8A8A8A{
   border-right: 1px solid #8A8A8A;
+}
+.borderRight1SB3B3B3{
+  border-right: 1px solid #B3B3B3;
 }
 .borderRight1Sdcdcdc{
   border-right: 1px solid #dcdcdc;
