fix. 導航列點擊回到首頁需要重新登入bug feat.新增登入後會自動儲存登入資訊 feat.建築資料列表-建築資源計算器

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -91,6 +91,9 @@
 .color_0415f5{
   color:#0415f5
 }
+.color_0600ff{
+  color:#0600ff
+}
 .color_07a30e{
   color: #07a30e;
 }
@@ -983,6 +986,10 @@
 .mAll_02{
   margin: 0.2rem;
 }
+.mAll_05{
+  margin: 0.5rem;
+}
+
 
 .mTop_auto{
   margin-top: auto;
@@ -1333,6 +1340,9 @@
 }
 .mBot_2{
   margin-bottom: 2rem;
+}
+.mBot_5{
+  margin-bottom: 5rem;
 }
 
 .mLeft_auto{
@@ -2667,4 +2677,11 @@
   transform: rotate(45deg);
   position: relative;
   left: 6px;
+}
+.bulidingLevelList:hover> .wid8{
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.buildinginCalculator:hover> .wid8 ,.buildinginCalculator:hover> .wid35>
+{
+  background-color: #c4c6d7;
 }
