feat 各頁面CSS feat 新增行軍計算分頁

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -74,6 +74,9 @@
 .fs1r{
   font-size: 1rem;
 }
+.fs2p5r{
+  font-size: 2.5rem;
+}
 //==================================
 //字體顏色
 .rgba_95{
@@ -413,8 +416,8 @@
 .hei15r{
   height: 1.5rem;
 }
-.hei16r{
-  height: 1.6rem;
+.hei1p7r{
+  height: 1.7rem;
 }
 .hei1p85r{
   height: 1.85rem;
@@ -432,6 +435,9 @@
 .hei21r{
   height: 2.1rem;
 }
+.hei2p2r{
+  height: 2.2rem;
+}
 .hei225r{
   height: 2.25rem;
 }
@@ -441,9 +447,7 @@
 .hei24r{
   height: 2.4rem;
 }
-.hei25r{
-  height: 2.5rem;
-}
+
 .hei26r{
   height: 2.6rem;
 }
@@ -491,6 +495,15 @@
 }
 .hei1265r{
   height: 12.65rem;
+}
+.hei16r{
+  height: 16rem;
+}
+.hei18r{
+  height: 18rem;
+}
+.hei19r{
+  height: 19rem;
 }
 .hei10p{
   height: 10%;
@@ -643,6 +656,9 @@
 .l-hei2r{
   line-height: 2rem;
 }
+.l-hei2p2r{
+  line-height: 2.2rem;
+}
 .l-hei1{
   line-height: 1;
 }
@@ -672,6 +688,9 @@
 }
 .wid5{
   width: 5%;
+}
+.wid6{
+  width: 6%;
 }
 .wid7{
   width: 7%;
@@ -973,6 +992,9 @@
 .wid64r{
   width: 6.4rem;
 }
+.wid8r{
+  width: 8rem;
+}
 .widFit{
   width: fit-content;
 }
@@ -991,6 +1013,9 @@
 }
 
 
+.mTop_0{
+  margin-top: 0;
+}
 .mTop_auto{
   margin-top: auto;
 }
@@ -1651,6 +1676,9 @@
 .pRight_08{
   padding-right: 0.8rem;
 }
+.pRight_1{
+  padding-right: 1rem;
+}
 .pRight_12{
   padding-right: 1.2rem;
 }
@@ -1757,6 +1785,9 @@
 .pLeft_07{
   padding-left: 0.7rem;
 }
+.pLeft_1{
+  padding-left: 1rem;
+} 
 .pLeft_12{
   padding-left: 1.2rem;
 } 
@@ -2313,6 +2344,9 @@
 .borderTop1Dblack{
   border-top: 1px dotted black;
 }
+.borderTop1S00003{
+  border-top: 1px solid rgba(0,0,0,0.3);
+}
 .borderTop1Sblack{
   border-top: 1px solid black;
 }
@@ -2348,7 +2382,9 @@
 .borderTop2Dfff{
   border-top: 2px dotted #fff;
 }
-
+.borderRight1S00003{
+  border-right:  1px solid rgba(0,0,0,0.3);
+}
 .borderRight1Sblack{
   border-right: 1px solid black;
 }
@@ -2376,8 +2412,14 @@
 .borderBottom001S2b2b2b{
   border-bottom: 0.01px solid #2b2b2b;
 }
+.borderBottom1S00003{
+  border-bottom:  1px solid rgba(0,0,0,0.3)
+}
 .borderBottom1Sblack{
   border-bottom: 1px solid black;
+}
+.borderBottom1Sad320d{
+  border-bottom: 1px solid #ad320d;
 }
 .borderBottom5SCF2321{
   border-bottom: 5px solid #CF2321;
@@ -2417,6 +2459,9 @@
 }
 .borderBottom2S2b2b2b{
   border-bottom: 2px solid #2b2b2b;
+}
+.borderLeft1S00003{
+  border-left:  1px solid rgba(0,0,0,0.3);
 }
 .borderLeft1Sblack{
   border-left: 1px solid black;
@@ -2593,6 +2638,9 @@
 .flowYHiden{
   overflow-y: hidden;
 }
+.testttt{
+  overflow-y: auto;
+}
 //=================z============
 .bshadow2220color333{
   box-shadow: 2px 2px 2px 0px #333;
@@ -2678,10 +2726,23 @@
   position: relative;
   left: 6px;
 }
-.bulidingLevelList:hover> .wid8{
+.bulidingLevelList:hover> .wid6 ,.bulidingLevelList:hover> .wid4{
   background-color: rgba(0, 0, 0, 0.1);
 }
-.buildinginCalculator:hover> .wid8 ,.buildinginCalculator:hover> .wid35>
+.buildinginCalculator:hover> .wid8 ,.buildinginCalculator:hover> .wid35 
 {
-  background-color: #c4c6d7;
+  color: red;
+  text-decoration:line-through;
+}
+.build:hover{
+  background-color: #2787c142;
+}
+.NavarButton:hover{
+  background-color: black;
+  color: #fff;
+}
+.troopsCalCulator:hover{
+  background-color: black;
+  color: #fff;
+  border: 1px solid #fff;
 }
