feat 建築計算器 優化

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -2748,8 +2748,12 @@
   left: 6px;
 }
 .bulidingLevelList:hover > .wid6,
-.bulidingLevelList:hover > .wid4 {
+.bulidingLevelList:hover > .wid4,
+.firstItem {
   background-color: rgba(0, 0, 0, 0.1);
+}
+.seconde {
+  background-color: #cf2321;
 }
 .buildinginCalculator:hover > .wid8,
 .buildinginCalculator:hover > .wid35 {
