feat 多頁面調整

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -508,6 +508,9 @@
 .hei19r {
   height: 19rem;
 }
+.hei30r {
+  height: 30rem;
+}
 .hei10p {
   height: 10%;
 }
@@ -1644,6 +1647,9 @@
 }
 .pTop_1 {
   padding-top: 1rem;
+}
+.pTop_2 {
+  padding-top: 2rem;
 }
 .pRight_0 {
   padding-right: 0;
