feat 新增放牛班Icon feat 開始製作手機版頁面 feat 代碼結構正式化

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -74,6 +74,9 @@
 .fs1r {
   font-size: 1rem;
 }
+.fs2r {
+  font-size: 2rem;
+}
 .fs2p5r {
   font-size: 2.5rem;
 }
@@ -450,6 +453,9 @@
 .hei24r {
   height: 2.4rem;
 }
+.hei25r {
+  height: 2.5rem;
+}
 
 .hei26r {
   height: 2.6rem;
@@ -507,6 +513,9 @@
 }
 .hei19r {
   height: 19rem;
+}
+.hei21r {
+  height: 21rem;
 }
 .hei30r {
   height: 30rem;
@@ -667,6 +676,9 @@
 }
 .l-hei2p2r {
   line-height: 2.2rem;
+}
+.l-hei25r {
+  line-height: 2.5rem;
 }
 .l-hei1 {
   line-height: 1;
@@ -1129,7 +1141,7 @@
 .mTop_18 {
   margin-top: 1.8rem;
 }
-.mTop_2 {
+.mTop_2r {
   margin-top: 2rem;
 }
 .mTop_21 {
@@ -2017,6 +2029,9 @@
 .right_01 {
   right: 0.1rem;
 }
+.right_1r {
+  right: 1rem;
+}
 .right_02 {
   right: 0.2rem;
 }
@@ -2384,6 +2399,9 @@
 .borderTop1Sdcdcdc {
   border-top: 1px solid #dcdcdc;
 }
+.borderTop1Sddd {
+  border-top: 1px solid #ddd;
+}
 .borderTop1Sgray {
   border-top: 1px solid gray;
 }
@@ -2454,8 +2472,11 @@
 .borderBottom1Sgray {
   border-bottom: 1px solid gray;
 }
-.borderBottom1D0D0D0 {
+.borderBottom1d0d0d0 {
   border-bottom: 1px solid #d0d0d0;
+}
+.borderBottom1ddd {
+  border-bottom: 1px solid #ddd;
 }
 .borderBottom1S8A8A8A {
   border-bottom: 1px solid #8a8a8a;
