feat 優化刷綠頁面

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -1032,6 +1032,9 @@
 .mAll_05 {
   margin: 0.5rem;
 }
+.mAll_1 {
+  margin: 1rem;
+}
 
 .mTop_0 {
   margin-top: 0;
@@ -1604,6 +1607,9 @@
 
 .pAll_06 {
   padding: 0.6rem;
+}
+.pAll_1{
+  padding: 1rem;
 }
 
 .pTop_005 {
