feat 調整建築資源計算器元件

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -584,8 +584,14 @@
 .maxhei102r {
   max-height: 10.2rem;
 }
+.maxhei60vh {
+  max-height: 60vh;
+}
 .maxhei100vh {
   max-height: 100vh;
+}
+.minWid100p{
+  min-width: 100%
 }
 //==================================
 .l-hei0 {
@@ -671,6 +677,9 @@
 .l-hei1p6r {
   line-height: 1.6rem;
 }
+.l-hei1p7r {
+  line-height: 1.7rem;
+}
 .l-hei2r {
   line-height: 2rem;
 }
@@ -731,6 +740,12 @@
 .wid12 {
   width: 12%;
 }
+.wid13 {
+  width: 13%;
+}
+.wid14 {
+  width: 14%;
+}
 .wid15 {
   width: 15%;
 }
@@ -763,6 +778,9 @@
 }
 .wid31 {
   width: 31%;
+}
+.wid32 {
+  width: 32%;
 }
 .wid33 {
   width: 33% !important;
@@ -1470,6 +1488,9 @@
 }
 .mLeft_5 {
   margin-left: 5rem;
+}
+.mLeft_1p {
+  margin-left: 1%;
 }
 .mLeft_2p {
   margin-left: 2%;
@@ -2682,6 +2703,9 @@
 }
 .flowAuto {
   overflow: auto;
+}
+.flowYOveyLay{
+   overflow-y: overlay
 }
 .flowHidden {
   overflow: hidden;
