feat 調整 建築資源列表版面

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -553,6 +553,9 @@
 .hei155 {
   height: 155%;
 }
+.hei75vh {
+  height: 75vh;
+}
 .hei100vh {
   height: 100vh;
 }
@@ -1353,6 +1356,9 @@
 }
 .mRight_2p {
   margin-right: 2%;
+}
+.mRight_4p {
+  margin-right: 4%;
 }
 .mRight_5p {
   margin-right: 5%;
