feat 新增匈奴埃及軍隊MetaData feat 行軍計算器頁面新增兵種對照表

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -854,6 +854,9 @@
 .wid60 {
   width: 60%;
 }
+.wid62 {
+  width: 62%;
+}
 .wid64 {
   width: 64%;
 }
@@ -2838,4 +2841,17 @@
   background-color: black;
   color: #fff;
   border: 1px solid #fff;
+}
+
+.newReleaseDeskTop {
+  background: linear-gradient(to right, #cf2321, #ec943d); /* 左橘 → 右黃 */
+  -webkit-background-clip: text; /* 讓背景應用在文字上 */
+  -webkit-text-fill-color: transparent; /* 讓文字透明以顯示背景 */
+  font-weight: bold; /* 可選 */
+}
+.newReleaseMobile {
+  background: linear-gradient(to right, #972ba3, #34e50a); /* 左橘 → 右黃 */
+  -webkit-background-clip: text; /* 讓背景應用在文字上 */
+  -webkit-text-fill-color: transparent; /* 讓文字透明以顯示背景 */
+  font-weight: bold; /* 可選 */
 }
