feat 暫存手機板刷綠頁面開發 feat 桌機板生怪邏輯文字

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -71,8 +71,17 @@
 .fs08r {
   font-size: 0.8rem;
 }
+.fs09r {
+  font-size: 0.9rem;
+}
 .fs1r {
   font-size: 1rem;
+}
+.fs1p2r {
+  font-size: 1.2rem;
+}
+.fs1p5r {
+  font-size: 1.5rem;
 }
 .fs2r {
   font-size: 2rem;
@@ -691,6 +700,9 @@
 }
 .l-hei25r {
   line-height: 2.5rem;
+}
+.l-hei3r {
+  line-height: 3rem;
 }
 .l-hei1 {
   line-height: 1;
@@ -1357,6 +1369,9 @@
 .mRight_135 {
   margin-right: 1.35rem;
 }
+.mRight_1p {
+  margin-right: 1%;
+}
 .mRight_2p {
   margin-right: 2%;
 }
@@ -1634,6 +1649,7 @@
 .pAll_035 {
   padding: 0.35rem;
 }
+
 .pAll_05 {
   padding: 0.5rem;
 }
@@ -2257,8 +2273,16 @@
 .bg_1f265a {
   background-color: #1f265a;
 }
+.bg_2724a9{
+  background-color: #2724a9;
+}
+.bg_LG2724a9_f5e5e5{
+ 
+background: linear-gradient(to right, #2724a9, #f5e5e5)
+}
+
 .bg_5F82FF {
-  background-color: #5f82ff;
+  background-color: #5F82FF;
 }
 .bg_d7d7d7 {
   background-color: #d7d7d7;
@@ -2851,6 +2875,13 @@
 }
 .newReleaseMobile {
   background: linear-gradient(to right, #972ba3, #34e50a); /* 左橘 → 右黃 */
+  -webkit-background-clip: text; /* 讓背景應用在文字上 */
+  -webkit-text-fill-color: transparent; /* 讓文字透明以顯示背景 */
+  font-weight: bold; /* 可選 */
+}
+
+.FarmOasisMobileTitle{
+   background: linear-gradient(to right, #c32105, #332b28); /* 左橘 → 右黃 */
   -webkit-background-clip: text; /* 讓背景應用在文字上 */
   -webkit-text-fill-color: transparent; /* 讓文字透明以顯示背景 */
   font-weight: bold; /* 可選 */
