feat 手機版新增刷綠相關頁面

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -490,6 +490,9 @@
 .hei4r {
   height: 4rem;
 }
+.hei4p5r {
+  height: 4.5rem;
+}
 .hei48r {
   height: 4.8rem;
 }
@@ -703,6 +706,9 @@
 }
 .l-hei3r {
   line-height: 3rem;
+}
+.l-hei4p5r {
+  line-height: 4.5rem;
 }
 .l-hei1 {
   line-height: 1;
@@ -1823,6 +1829,9 @@
 .pBot_25 {
   padding-bottom: 2.5rem;
 }
+.pBot_4p5 {
+  padding-bottom: 4.5rem;
+}
 .pBot_65 {
   padding-bottom: 6.5rem;
 }
@@ -2276,10 +2285,6 @@
 .bg_2724a9{
   background-color: #2724a9;
 }
-.bg_LG2724a9_f5e5e5{
- 
-background: linear-gradient(to right, #2724a9, #f5e5e5)
-}
 
 .bg_5F82FF {
   background-color: #5F82FF;
@@ -2444,6 +2449,9 @@ background: linear-gradient(to right, #2724a9, #f5e5e5)
 .borderTop1Dblack {
   border-top: 1px dotted black;
 }
+.borderTop1Sad320d {
+  border-top: 1px solid #ad320d;
+}
 .borderTop1S00003 {
   border-top: 1px solid rgba(0, 0, 0, 0.3);
 }
@@ -2576,6 +2584,9 @@ background: linear-gradient(to right, #2724a9, #f5e5e5)
 }
 .borderLeft1Sblack {
   border-left: 1px solid black;
+}
+.borderLeft1SB3B3B3 {
+  border-left: 1px solid #b3b3b3;
 }
 //==================================
 .bgSize_contain {
@@ -2885,4 +2896,17 @@ background: linear-gradient(to right, #2724a9, #f5e5e5)
   -webkit-background-clip: text; /* 讓背景應用在文字上 */
   -webkit-text-fill-color: transparent; /* 讓文字透明以顯示背景 */
   font-weight: bold; /* 可選 */
+}
+.FarmOasisMobileTitle{
+   background: linear-gradient(to right, #c32105, #332b28); /* 左橘 → 右黃 */
+  -webkit-background-clip: text; /* 讓背景應用在文字上 */
+  -webkit-text-fill-color: transparent; /* 讓文字透明以顯示背景 */
+  font-weight: bold; /* 可選 */
+}
+
+.bg_FarmOasisSelectd{
+  background: linear-gradient(to right, #2724a9, #f5e5e5)
+}
+.bg_FarmOasisUnSelectd{
+  background: linear-gradient(to right, #fff, #98c2cd)
 }
