--- a/src/style/common.less
+++ b/src/style/common.less
@@ -2389,6 +2389,9 @@
 .border1Sed715d {
   border: 1px solid #ed715d;
 }
+.border1S2d2d31{
+  border: 1px solid #2d2d31;
+}
 .border2Dblack {
   border: 2px dotted black;
 }
