--- a/src/style/common.less
+++ b/src/style/common.less
@@ -1724,6 +1724,9 @@
 .pTop_2 {
   padding-top: 2rem;
 }
+.pTop_8 {
+  padding-top: 8rem;
+}
 .pRight_0 {
   padding-right: 0;
 }
@@ -2470,6 +2473,9 @@
 .borderTop1SB3B3B3 {
   border-top: 1px solid #b3b3b3;
 }
+.borderTop1S7E7E7E{
+  border-top: 1px solid #7e7e7e;
+}
 .borderTop1Sdcdcdc {
   border-top: 1px solid #dcdcdc;
 }
@@ -2558,6 +2564,9 @@
 .borderBottom1SB3B3B3 {
   border-bottom: 1px solid #b3b3b3;
 }
+.borderBottom1S7E7E7E {
+  border-bottom: 1px solid #7e7e7e;
+}
 .borderBottom1Sf5f5f5 {
   border-bottom: 1px solid #f5f5f5;
 }
@@ -2590,6 +2599,9 @@
 }
 .borderLeft1SB3B3B3 {
   border-left: 1px solid #b3b3b3;
+}
+.borderLeft1S7e7e7e {
+  border-left: 1px solid #7e7e7e;
 }
 //==================================
 .bgSize_contain {
@@ -2894,18 +2906,13 @@
   font-weight: bold; /* 可選 */
 }
 
-.FarmOasisMobileTitle{
+.FarmOasisMobileTitle,.BuildingListMobileTile{
    background: linear-gradient(to right, #c32105, #332b28); /* 左橘 → 右黃 */
   -webkit-background-clip: text; /* 讓背景應用在文字上 */
   -webkit-text-fill-color: transparent; /* 讓文字透明以顯示背景 */
   font-weight: bold; /* 可選 */
 }
-.FarmOasisMobileTitle{
-   background: linear-gradient(to right, #c32105, #332b28); /* 左橘 → 右黃 */
-  -webkit-background-clip: text; /* 讓背景應用在文字上 */
-  -webkit-text-fill-color: transparent; /* 讓文字透明以顯示背景 */
-  font-weight: bold; /* 可選 */
-}
+
 
 .bg_FarmOasisSelectd{
   background: linear-gradient(to right, #2724a9, #f5e5e5)
