feat 新增手機版建築資源計算器

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -109,6 +109,9 @@
 .color_0600ff {
   color: #0600ff;
 }
+.color_64727d{
+  color: #64727d;
+}
 .color_07a30e {
   color: #07a30e;
 }
@@ -598,6 +601,9 @@
 }
 .maxhei102r {
   max-height: 10.2rem;
+}
+.maxhei15r {
+  max-height: 15rem;
 }
 .maxhei60vh {
   max-height: 60vh;
@@ -1513,8 +1519,8 @@
 .mLeft_2p1 {
   margin-left: 2.1rem;
 }
-.mLeft_4 {
-  margin-left: 4rem;
+.mLeft_3 {
+  margin-left: 3rem;
 }
 .mLeft_5 {
   margin-left: 5rem;
@@ -2361,6 +2367,16 @@
 .bg_2f2b2b {
   background-color: #2f2b2b;
 }
+.bg_e3fdff{
+  background-color: #e3fdff;
+}
+.bg_f7f7f7{
+  background-color: #f7f7f7;
+}
+.bg_002eff{
+  background-color: #002eff;
+}
+
 .bg_none {
   background: none;
 }
@@ -2869,18 +2885,17 @@
   position: relative;
   left: 6px;
 }
-.bulidingLevelList:hover > .wid6,
-.bulidingLevelList:hover > .wid4,
+.bulidingLevelList:hover ,
 .firstItem {
   background-color: rgba(0, 0, 0, 0.1);
 }
 .seconde {
   background-color: #cf2321;
 }
-.buildinginCalculator:hover > .wid8,
-.buildinginCalculator:hover > .wid35 {
-  color: red;
-  text-decoration: line-through;
+.buildinginCalculator:hover > .wid10,
+.buildinginCalculator:hover > .wid15,
+.buildinginCalculator:hover > .wid25{
+  background-color: #cf2321;
 }
 .build:hover,
 .loginButton:hover {
@@ -2922,4 +2937,10 @@
 }
 .bg_FarmOasisUnSelectd{
   background: linear-gradient(to right, #fff, #98c2cd)
+}
+.bg_BuildingCateGorySelectd{
+  background: linear-gradient(to right, #0b23ef, #1c1414);
+}
+.bg_BuildingCateGorySelectd2{
+      background: linear-gradient(to right, #f9ecec, #c5c5c5);
 }
