feat 新增手機版行軍計算器 feat 優化手機版Navbar

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -437,6 +437,9 @@
 .hei1p7r {
   height: 1.7rem;
 }
+.hei1p8r {
+  height: 1.8rem;
+}
 .hei1p85r {
   height: 1.85rem;
 }
@@ -483,6 +486,9 @@
 }
 .hei3r {
   height: 3rem;
+}
+.hei3p2r{
+  height: 3.2rem;
 }
 .hei35r {
   height: 3.5rem;
@@ -692,6 +698,10 @@
 .l-hei12r {
   line-height: 1.2rem;
 }
+.l-hei1p4r{
+  line-height: 1.4rem;
+}
+
 .l-hei15r {
   line-height: 1.5rem;
 }
@@ -700,6 +710,9 @@
 }
 .l-hei1p7r {
   line-height: 1.7rem;
+}
+.l-hei1p8r {
+  line-height: 1.8rem;
 }
 .l-hei2r {
   line-height: 2rem;
@@ -932,6 +945,9 @@
 .wid95 {
   width: 95%;
 }
+.wid97p5 {
+  width: 97.5%;
+}
 .wid100 {
   width: 100%;
 }
@@ -1015,6 +1031,9 @@
 }
 .wid12r {
   width: 1.2rem;
+}
+.wid1p4r {
+  width: 1.4rem;
 }
 .wid15r {
   width: 1.5rem;
@@ -1392,6 +1411,9 @@
 }
 .mRight_5p {
   margin-right: 5%;
+}
+.mRight_10p {
+  margin-right: 10%;
 }
 .mRight_15p {
   margin-right: 15%;
@@ -1835,6 +1857,9 @@
 .pBot_07 {
   padding-bottom: 0.7rem;
 }
+.pBot_2 {
+  padding-bottom: 2rem;
+}
 .pBot_25 {
   padding-bottom: 2.5rem;
 }
@@ -1904,6 +1929,9 @@
 }
 .pLeft_16p {
   padding-left: 16%;
+}
+.pLeft_30p {
+  padding-left: 30%;
 }
 .pLeft_40p {
   padding-left: 40%;
@@ -2114,6 +2142,9 @@
 .right_05 {
   right: 0.5rem;
 }
+.right_2p3 {
+  right: 2.3rem;
+}
 .right_n02 {
   right: -0.2rem;
 }
@@ -2264,6 +2295,9 @@
 .bg_00004 {
   background-color: rgba(0, 0, 0, 0.4);
 }
+.bg_00005 {
+  background-color: rgba(0, 0, 0, 0.5);
+}
 .bg_00007 {
   background-color: rgba(0, 0, 0, 0.7);
 }
@@ -2297,7 +2331,9 @@
 .bg_2724a9{
   background-color: #2724a9;
 }
-
+.bg_7b0c7b{
+  background-color: #7b0c7b;
+}
 .bg_5F82FF {
   background-color: #5F82FF;
 }
@@ -2694,6 +2730,9 @@
 .borderRadius065r {
   border-radius: 0.65rem;
 }
+.borderRadius1r {
+  border-radius: 1rem;
+}
 .borderRadius50 {
   border-radius: 50%;
 }
@@ -2807,6 +2846,9 @@
 //=============================
 .transform_05_20 {
   translate: 5%, 20%;
+}
+.transform_20_20 {
+   transform: translate(20%, 20%);
 }
 .transform_n50_n50 {
   transform: translate(-50%, -50%);
@@ -2943,4 +2985,7 @@
 }
 .bg_BuildingCateGorySelectd2{
       background: linear-gradient(to right, #f9ecec, #c5c5c5);
+}
+.bg_navbarButton{
+  background: linear-gradient(to bottom, #0a0a0a, #781c36);
 }
