fix 刷綠頁面遺漏大象 fix 行軍計算器 +-值為判斷是否超過地圖大小問題 feat 條頓配置項缺點補充帶斧慢 feat 調整配置項 釀酒廠上色 feat 新增建築計算器同一物件計算多個

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -332,6 +332,10 @@
 .hei20px {
   height: 20px;
 }
+
+.hei32px {
+  height: 32px;
+}
 .hei018r {
   height: 0.18rem;
 }
@@ -611,6 +615,12 @@
 .maxhei15r {
   max-height: 15rem;
 }
+.maxhei20r {
+  max-height: 20rem;
+}
+.maxhei21r {
+  max-height: 21rem;
+}
 .maxhei60vh {
   max-height: 60vh;
 }
@@ -623,6 +633,9 @@
 //==================================
 .l-hei0 {
   line-height: 0;
+}
+.l-hei32px{
+  line-height: 32px;
 }
 .l-hei024r {
   line-height: 0.24rem;
@@ -741,9 +754,13 @@
 .wid20px {
   width: 20px;
 }
+.wid32px {
+  width: 32px;
+}
 .wid50px {
   width: 50px;
 }
+
 .wid100px {
   width: 100px;
 }
@@ -2888,35 +2905,39 @@
   }
 }
 .animal {
-  background-image: url("../images/nature_small.png");
+  background-repeat: no-repeat;
+  background-image: url("../images/nature_small20250704_2x.png");
 }
 .animal1 {
-  background-position: 0 -0;
+  background-position: 0 0;
 }
 
 .animal2 {
-  background-position: 0 -16px;
-}
-.animal3 {
   background-position: 0 -32px;
 }
+.animal3 {
+  background-position: 0 -64px;    
+}
 .animal4 {
-  background-position: 0 -48px;
-}
-.animal5 {
-  background-position: 0 -64px;
-}
-.animal6 {
-  background-position: 0 -80px;
-}
-.animal7 {
   background-position: 0 -96px;
 }
+.animal5 {
+  background-position: 0 -128px;
+}
+.animal6 {
+  background-position: 0 -160px;
+}
+.animal7 {
+  background-position: 0 -192px;
+}
 .animal8 {
-  background-position: 0 -112px;
+  background-position: 0 -224px;
 }
 .animal9 {
-  background-position: 0 -128px;
+  background-position: 0 -256px;
+}
+.animal10 {
+  background-position: 0 -288px;
 }
 .onSelect {
   width: 7px;
