feat 新增建築計算器顯示區塊自定義高度

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -420,7 +420,7 @@
 .hei106r {
   height: 1.06rem;
 }
-.hei11r {
+.hei1p1r {
   height: 1.1rem;
 }
 .hei12r {
@@ -527,6 +527,12 @@
 .hei10r {
   height: 10rem;
 }
+.hei11r {
+  height: 11rem;
+}
+.hei12p5r {
+  height: 12.5rem;
+}
 .hei1265r {
   height: 12.65rem;
 }
@@ -611,6 +617,9 @@
 }
 .maxhei102r {
   max-height: 10.2rem;
+}
+.maxhei12r {
+  max-height: 12rem;
 }
 .maxhei15r {
   max-height: 15rem;
@@ -1609,6 +1618,9 @@
 .mLeft_30p {
   margin-left: 30%;
 }
+.mLeft_33p {
+  margin-left: 33%;
+}
 .mLeft_35p {
   margin-left: 35%;
 }
@@ -1944,8 +1956,14 @@
 .pLeft_10p {
   padding-left: 10%;
 }
+.pLeft_15p {
+  padding-left: 15%;
+}
 .pLeft_16p {
   padding-left: 16%;
+}
+.pLeft_20p {
+  padding-left: 20%;
 }
 .pLeft_30p {
   padding-left: 30%;
